Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.1.13
-
None
-
win7x64
Description
a server with encryption enabled fails to start. reverting to 10.1.12 works as expected. 10.1.13 error is reported in log file as:
2016-03-26 9:04:52 7088 [ERROR] InnoDB: Redo log crypto: getting mysqld crypto key from key version failed. Reason could be that requested key version is not found or required encryption key management plugin is not found.
|
2016-03-26 9:04:52 7088 [ERROR] Plugin 'InnoDB' init function returned error.
|
2016-03-26 9:04:52 7088 [ERROR] Plugin 'InnoDB' registration as a STORAGE ENGINE failed.
|
2016-03-26 9:04:52 7088 [ERROR] Unknown/unsupported storage engine: InnoDB
|
2016-03-26 9:04:52 7088 [ERROR] Aborting
|
I have tried multiple installs, both without removing previous version and also with clean installs. The same thing happens each time so does not appear to be transient.
Attachments
Issue Links
- is part of
-
MDEV-9774 Checksum errors on restart when killing busy instance that uses encrypted XtraDB tables with <10.1.13
-
- Closed
-
Please attach the full error log and your cnf file(s).